@@ -1,3 +1,8 @@
+2007-11-14  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/detect.py: 
+	  update our script on the cheese page
+
 2007-11-12  daniel g. siegel <dgsiegel@gmail.com>
 
 	* www.gnome.org/projects/cheese/data/images/dialog-warning.png,
